install/10-argocd/archive/ingress-nginx-grpc.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"

  name: argocd-server-grpc
  namespace: argocd

spec:
  ingressClassName: nginx
  rules:
  - host: grpc.argocd.pauljsolomon.net
    http:
      paths:
      - backend:
          service:
            name: argocd-server
            port:
              number: 443
        path: /
        pathType: Prefix
