install/10-argocd/archive/ingress-save.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-ingress
  namespace: argocd
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTPS
spec:
  ingressClassName: alb
  rules:
  - host: argocd.pauljsolomon.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              name: http





#apiVersion: networking.k8s.io/v1
#kind: Ingress
#metadata:
#  name: argocd-ingress
#  namespace: argocd
#  annotations:
#    alb.ingress.kubernetes.io/load-balancer-name: apps-ingress
#    alb.ingress.kubernetes.io/target-type: ip
#    alb.ingress.kubernetes.io/scheme: internet-facing
#    alb.ingress.kubernetes.io/healthcheck-path: /login
##    alb.ingress.kubernetes.io/healthcheck-path: /healthz
#    alb.ingress.kubernetes.io/group.name: common-ingress-group
##    alb.ingress.kubernetes.io/backend-protocol: HTTP
#    kubernetes.io/ingress.class: alb
#spec:
#  ingressClassName: alb
#  #defaultBackend:
#  #  service:
#  #    name: error
#  #    port:
#  #      name: svc-port
#  rules:
#    #- host: argocd2.pauljsolomon.net
#    - http:
#        paths:
#          - path: /
#            pathType: Prefix
#            backend:
#              service:
#                name: argocd-server
#                port:
#                  number: 80

#apiVersion: networking.k8s.io/v1
#kind: Ingress
#metadata:
#  name: argocd-ingress
#  namespace: argocd
#  annotations:
#    kubernetes.io/ingress.class: alb
#    alb.ingress.kubernetes.io/scheme: internet-facing
#    alb.ingress.kubernetes.io/certificate-arn: {your certificate arn}
#    alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-2016-08
#    alb.ingress.kubernetes.io/backend-protocol: HTTPS
#    alb.ingress.kubernetes.io/healthcheck-path: /login
#    alb.ingress.kubernetes.io/target-type: 'ip'
#    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80,"HTTPS": 443}]'
#    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
#  finalizers:
#    - ingress.k8s.aws/resources
#  labels:
#    app: argocd-ingress
#spec:
#  rules:
#    - host: argocd.{your domain} # ex: argocd.medium.com
#      http:
#        paths:
#          - path: /
#            backend:
#              service:
#                name: argocd-server
#                port:
#                  number: 443
#            pathType: Prefix
